--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\Common\Scripts\TapHandler.cs" />
      <Compile Include="Assets\Common\Scripts\TrackableSettings.cs" />
      <Compile Include="Assets\Common\Scripts\VLog.cs" />
+     <Compile Include="Assets\Scripts\DirectionIndicator.cs" />
      <Compile Include="Assets\Scripts\EnemyScript.cs" />
      <Compile Include="Assets\Scripts\GameLogic.cs" />
      <Compile Include="Assets\Scripts\MainMenuScript.cs" />
